--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mapbox_access_token">
+        pk.eyJ1IjoiYXBhdG9ybWFwYm94IiwiYSI6ImNqeTQ5OXlsZjE0anIzY21xb3Nsb2tubTgifQ.c4_iQgT_fg0-ZwhwMrKroQ
+    </string>
 </resources>
