--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ApatorMapbox</string>
+    <string name="sync_key">sync_key</string>
+    <string name="userAPI_key">userAPI_key</string>
+    <string name="timeWindow_key">timeWindow_key</string>
 </resources>
