Ustawianie wartości w widoku ustawień przy uruchomieniu widoku oraz zmianie preferencji

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="mapbox_access_token">
         pk.eyJ1IjoiYXBhdG9ybWFwYm94IiwiYSI6ImNqeTQ5OXlsZjE0anIzY21xb3Nsb2tubTgifQ.c4_iQgT_fg0-ZwhwMrKroQ
     </string>
-    <string name="sync_key">sync_key</string>
-    <string name="userAPI_key">userAPI_key</string>
-    <string name="timeWindow_key">timeWindow_key</string>
+    <!--Preference keys-->
+    <string name="sync_preference">sync_preference</string>
+    <string name="api_key_preference">api_key_preference</string>
+    <string name="time_window_preference">time_window_preference</string>
 </resources>
