--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sync_preference">sync_preference</string>
     <string name="api_key_preference">api_key_preference</string>
     <string name="time_window_preference">time_window_preference</string>
+    <string name="solar_api">0T4V4lMTxPT7b9JJexnz1vLsPzWXlX6XV8exWuud</string>
 </resources>
