--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,7 @@
     <string name="SolarRF_textView_PF">Filename:</string>
     <string name="Distance_textView_PF">Distance:</string>
     <string name="value">value</string>
-    <!--
-        <string name="solar_api">0T4V4lMTxPT7b9JJexnz1vLsPzWXlX6XV8exWuud</string>
-    -->
+
     <string name="synchronization">Synchronization</string>
     <string name="solar_api_key">Solar API key</string>
     <string name="time_window">Time Window</string>
@@ -33,4 +31,7 @@
     <string name="cancel_btn_CL">cancel</string>
     <string name="choice_textView_AD">Choose your solar</string>
 
+    <string name="solar_api">0T4V4lMTxPT7b9JJexnz1vLsPzWXlX6XV8exWuud</string>
+
+    <string name="api_key_error_message">Solar API key error</string>
 </resources>
