--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="solar_api">0T4V4lMTxPT7b9JJexnz1vLsPzWXlX6XV8exWuud</string>
 
     <string name="api_key_error_message">Solar API key error</string>
+    <string name="map_url">mapbox://styles/apatormapbox/cjyfsbbq207q91dqi32j6435u</string>
 </resources>
